src/objects/Non_ERP_Products__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Name__c</fullName>
        <description>Used for Japan</description>
        <label>Additional Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>AssignmentRuleCodes__c</fullName>
        <inlineHelpText>Comma-separated PG4, PG4, PG2 or PG1 codes to be used to identify the Non-ERP Product as well as the Product Family upon inserting a regular DS product.</inlineHelpText>
        <label>Assignment Rule Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Catch_Phrase__c</fullName>
        <description>Used for Japan</description>
        <label>Catch Phrase</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Competitor_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Competitor Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Countries__c</fullName>
        <label>Countries</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country_Code_2_digit</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CustomCategory__c</fullName>
        <description>Used for any kind of Custome categorization of the non-erp products. Example is MENA region that categorize the non-erp into specific categorizations used for their sub-segmentation calculations</description>
        <inlineHelpText>Local speciifc categorization needs</inlineHelpText>
        <label>Custom Category</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Used for Japan</description>
        <label>Details</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GlobalProductShowtoallcountries__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this product will be shown to all countries regardless of the countries&apos; field selection.  
TFUS-000005477</description>
        <inlineHelpText>If checked, this product will be shown to all countries regardless of the countries&apos; field selection.</inlineHelpText>
        <label>Global Product (Show to all countries)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Kana__c</fullName>
        <description>Used for Japan</description>
        <label>Kana</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>KeyProduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Focus Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>Manufacturer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <formula>IF(TEXT( Product_Market_Mapping__r.Market__c )=&apos;IT&apos;, &apos;Italy&apos;,IF(TEXT( Product_Market_Mapping__r.Market__c )=&apos;ES&apos;, &apos;Iberia&apos;, TEXT(Product_Market_Mapping__r.Market__c)))</formula>
        <label>Market</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Old_Product_ID__c</fullName>
        <description>Used for Japan</description>
        <label>Old Product ID</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Assocaites the non-ERP product to a product family. Used for the Workflow definitions and analysis</description>
        <label>Product Family</label>
        <referenceTo>ProductFamily__c</referenceTo>
        <relationshipLabel>Non-ERP Products</relationshipLabel>
        <relationshipName>Non_ERP_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductGroupText__c</fullName>
        <label>Product Group (Global)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <description>Free Text, optional</description>
        <inlineHelpText>This field controls the grouping of records in the Product Profiling component on Accounts/Contacts</inlineHelpText>
        <label>Product Group (Local)</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Image_1__c</fullName>
        <description>Used for Japan</description>
        <label>Product Image 1</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Image_2__c</fullName>
        <description>Used for Japan</description>
        <label>Product Image 2</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Image_3__c</fullName>
        <description>Used for Japan</description>
        <label>Product Image 3</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Market_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Market Mapping</label>
        <referenceTo>SSIS_ERP_SKU_Metadata_Country_Connectio__c</referenceTo>
        <relationshipName>Products_Profiling</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QuantityUnitOfMeasure__c</fullName>
        <label>Quantity Unit Of Measure</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>pieces</fullName>
                    <label>pcs</label>
                </value>
                <value>
                    <fullName>pieces/month</fullName>
                </value>
                <value>
                    <fullName>pieces/year</fullName>
                </value>
                <value>
                    <fullName>boxes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replacements__c</fullName>
        <description>Used for Japan</description>
        <label>Replacements</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SBU__c</fullName>
        <label>Product Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CADCAM</fullName>
                    <label>CAD/CAM</label>
                </value>
                <value>
                    <fullName>Endodontics</fullName>
                </value>
                <value>
                    <fullName>Imaging</fullName>
                </value>
                <value>
                    <fullName>Implants</fullName>
                </value>
                <value>
                    <fullName>Labratory</fullName>
                </value>
                <value>
                    <fullName>Orthodontics</fullName>
                </value>
                <value>
                    <fullName>Preventive</fullName>
                </value>
                <value>
                    <fullName>Restorative</fullName>
                </value>
                <value>
                    <fullName>Treatment Centers</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Search_Keyword__c</fullName>
        <description>Used for Japan</description>
        <label>Search Keyword</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Used for Japan</description>
        <label>Stock Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Stock Only(Part)</fullName>
                </value>
                <value>
                    <fullName>Stock Only</fullName>
                </value>
                <value>
                    <fullName>End of Sales(Part)</fullName>
                </value>
                <value>
                    <fullName>End of Sales</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>T35_Name_UK__c</fullName>
        <description>Used for UK</description>
        <inlineHelpText>Only in use for UK</inlineHelpText>
        <label>T35 Name (UK)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Valid_in_my_Market__c</fullName>
        <formula>IF(UPPER(TEXT($User.Market__c))=UPPER(TEXT(Product_Market_Mapping__r.Market__c)), True, 
IF(TEXT($User.Market__c)=&quot;South Africa&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;ZA&quot;,True,
IF(TEXT($User.Market__c)=&quot;Iberia&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;ES&quot;,True,
IF(TEXT($User.Market__c)=&quot;Thailand&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;TH&quot;,True,
IF(TEXT($User.Market__c)=&quot;Australia&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;AU&quot;,True,
IF(TEXT($User.Market__c)=&quot;Hong Kong&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;HK&quot;,True,
IF(TEXT($User.Market__c)=&quot;Singapore&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;SG&quot;,True,
IF(TEXT($User.Market__c)=&quot;Germany&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;DE&quot;,True,
IF(TEXT($User.Market__c)=&quot;Austria&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;AT&quot;,True,
IF(TEXT($User.Market__c)=&quot;Switzerland&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;DE&quot;,True,
IF(TEXT($User.Market__c)=&quot;France&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;FR&quot;,True,
IF(TEXT($User.Market__c)=&quot;Italy&quot; &amp;&amp; TEXT(Product_Market_Mapping__r.Market__c)=&quot;IT&quot;,True,False)/*italy, iberia &amp; south africa exception*/
)))))))))))</formula>
        <label>Valid in my Market?</label>
        <type>Checkbox</type>
    </fields>
    <label>Non-ERP Products</label>
    <listViews>
        <fullName>AT</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Austria</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>AT</value>
        </filters>
        <label>AT</label>
        <language>en_US</language>
        <sharedTo>
            <role>D_A_CH_CRM_Analyst</role>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>CH</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>CH</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>CH</value>
        </filters>
        <label>CH</label>
        <language>en_US</language>
        <sharedTo>
            <role>D_A_CH_CRM_Analyst</role>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DE</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>DE</value>
        </filters>
        <label>DE</label>
        <language>en_US</language>
        <sharedTo>
            <role>D_A_CH_CRM_Analyst</role>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FR</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>FR</value>
        </filters>
        <label>FR</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
            <role>FR_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Global_Product_Group_Empty</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>ProductGroupText__c</columns>
        <columns>Product_Category__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SBU__c</columns>
        <columns>Manufacturer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>ProductGroupText__c</field>
            <operation>equals</operation>
        </filters>
        <label>Global Product Group Empty</label>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IB</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Iberia</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>ES,PT,AD</value>
        </filters>
        <label>IB</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
            <role>IT_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IT</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Italy</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>IT</value>
        </filters>
        <label>IT</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
            <role>IT_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Iberia</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>OBJECT_ID</columns>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Iberia</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>AD,ES,PT</value>
        </filters>
        <label>Iberia</label>
    </listViews>
    <listViews>
        <fullName>Manufacturer_Empty</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>ProductGroupText__c</columns>
        <columns>Product_Category__c</columns>
        <columns>OBJECT_ID</columns>
        <columns>SBU__c</columns>
        <columns>Manufacturer__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>NA</value>
        </filters>
        <filters>
            <field>Manufacturer__c</field>
            <operation>equals</operation>
        </filters>
        <label>Manufacturer Empty</label>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PL</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ProductGroupText__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>Competitor_Product__c</columns>
        <columns>NAME</columns>
        <columns>Product_Category__c</columns>
        <columns>KeyProduct__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Poland</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>equals</operation>
            <value>PL</value>
        </filters>
        <label>PL</label>
        <language>en_US</language>
        <sharedTo>
            <role>CEE_CRM_Analyst</role>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Russia_Prods</fullName>
        <columns>NAME</columns>
        <columns>Market__c</columns>
        <columns>Countries__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Russia</value>
        </filters>
        <label>Russia Prods</label>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TR</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>Turkey</value>
        </filters>
        <filters>
            <field>Countries__c</field>
            <operation>includes</operation>
            <value>TR</value>
        </filters>
        <label>TR</label>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UK</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <label>UK</label>
        <language>en_US</language>
        <sharedTo>
            <role>Dentsply_IH_CEO</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>UK_Products1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Market__c</field>
            <operation>equals</operation>
            <value>UK</value>
        </filters>
        <label>UK Products</label>
        <sharedTo>
            <role>UK_IE_CRM_Analyst</role>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Non-ERP Products</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>